force-app/main/default/objects/Voice_Company_Phone_Number__c/Voice_Company_Phone_Number__c.object-meta.xml
<CustomObject>
    <description>Voice - Company Phone Numbers - in place of re-utilizing the DID object of eFAX</description>
    <label>Customer Contact Phone Number</label>
    <nameField>
        <displayFormat>CPN-{00000000}</displayFormat>
        <label>Voice: Company Phone Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Contact Phone Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>