force-app/main/default/objects/Voice_Company_Phone_Number__c/fields/Company_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_Number__c</fullName>
    <description>Voice - WCSA - Company Phone Number - Account can have an unlimited amount of #&apos;s</description>
    <inlineHelpText>Voice - WCSA - Company Phone Number - Account can have an unlimited amount of #&apos;s</inlineHelpText>
    <label>Company Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>