force-app/main/default/objects/Voice_Company_Phone_Number__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Voice - WCSA - User Level Account - Company Phone Number Extension</description>
    <inlineHelpText>Voice - WCSA - User Level Account - Company Phone Number Extension</inlineHelpText>
    <label>Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>