force-app/main/default/objects/Voice_Company_Phone_Number__c/fields/Phone_For_Matching__c.field-meta.xml
<CustomField>
    <fullName>Phone_For_Matching__c</fullName>
    <description>Voice - WCSA - External ID - Company: Pone Numbers</description>
    <externalId>true</externalId>
    <inlineHelpText>Voice - WCSA - External ID - Company: Pone Numbers</inlineHelpText>
    <label>Phone_For_Matching</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>