force-app/main/default/objects/Voice_Company_Phone_Number__c/fields/Phone_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type_Description__c</fullName>
    <description>Voice - WCSA - Phone Type description of the Company phone Number</description>
    <inlineHelpText>Voice - WCSA - Phone Type description of the Company phone Number</inlineHelpText>
    <label>Phone Type Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>