force-app/main/default/objects/Voice_Company_Phone_Number__c/fields/Voice_Account__c.field-meta.xml
<CustomField>
    <fullName>Voice_Account__c</fullName>
    <label>Voice: Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Voice_Company_Phone_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>